fix: prevent flyout content overflow (#2010)

--- a/packages/components/src/components/Flyout/styles/flyout.module.scss
+++ b/packages/components/src/components/Flyout/styles/flyout.module.scss
@@ -10,6 +10,7 @@
     border: var(--line-width) solid var(--line-color);
     width: 100%;
     margin-top: sizeToken(4);
+    overflow: auto;
 
     &[data-rounded='true'] {
         border-radius: var(--radius);
